--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,11 @@ path = "src/day01.rs"
 name = "day02"
 path = "src/day02.rs"
 
+[[bin]]
+name = "day03"
+path = "src/day03.rs"
+
 [dependencies]
+regex = "1.11"
+anyhow = "1.0"
+once_cell = "1.20"
