--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,10 @@ path = "src/day04.rs"
 name = "day05"
 path = "src/day05.rs"
 
+[[bin]]
+name = "day06"
+path = "src/day06.rs"
+
 [dependencies]
 regex = "1.11"
 anyhow = "1.0"
