--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,11 @@ path = "src/day10.rs"
 name = "day11"
 path = "src/day11.rs"
 
+[[bin]]
+name = "day12"
+path = "src/day12.rs"
+
+
 [dependencies]
 regex = "1.11"
 anyhow = "1.0"
