--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,7 +63,12 @@ path = "src/day14.rs"
 name = "day15"
 path = "src/day15.rs"
 
+[[bin]]
+name = "day16"
+path = "src/day16.rs"
+
 [dependencies]
 regex = "1.11"
 anyhow = "1.0"
 once_cell = "1.20"
+keyed_priority_queue = "0.4.2"
