--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,10 @@ path = "src/day15.rs"
 name = "day16"
 path = "src/day16.rs"
 
+[[bin]]
+name = "day17"
+path = "src/day17.rs"
+
 [dependencies]
 regex = "1.11"
 anyhow = "1.0"
