--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,10 @@ path = "src/day16.rs"
 name = "day17"
 path = "src/day17.rs"
 
+[[bin]]
+name = "day18"
+path = "src/day18.rs"
+
 [dependencies]
 regex = "1.11"
 anyhow = "1.0"
