--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,6 +75,10 @@ path = "src/day17.rs"
 name = "day18"
 path = "src/day18.rs"
 
+[[bin]]
+name = "day19"
+path = "src/day19.rs"
+
 [dependencies]
 regex = "1.11"
 anyhow = "1.0"
