--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,6 +79,10 @@ path = "src/day18.rs"
 name = "day19"
 path = "src/day19.rs"
 
+[[bin]]
+name = "day20"
+path = "src/day20.rs"
+
 [dependencies]
 regex = "1.11"
 anyhow = "1.0"
