--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,3 +88,6 @@ regex = "1.11"
 anyhow = "1.0"
 once_cell = "1.20"
 keyed_priority_queue = "0.4.2"
+
+[profile.dev]
+opt-level = 1  # Use slightly better optimizations.
