--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,11 +83,16 @@ path = "src/day19.rs"
 name = "day20"
 path = "src/day20.rs"
 
+[[bin]]
+name = "day21"
+path = "src/day21.rs"
+
 [dependencies]
 regex = "1.11"
 anyhow = "1.0"
 once_cell = "1.20"
 keyed_priority_queue = "0.4.2"
+itertools = "0.13.0"
 
 [profile.dev]
 opt-level = 1  # Use slightly better optimizations.
