--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,6 +87,10 @@ path = "src/day20.rs"
 name = "day21"
 path = "src/day21.rs"
 
+[[bin]]
+name = "day22"
+path = "src/day22.rs"
+
 [dependencies]
 regex = "1.11"
 anyhow = "1.0"
