--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,6 +91,10 @@ path = "src/day21.rs"
 name = "day22"
 path = "src/day22.rs"
 
+[[bin]]
+name = "day23"
+path = "src/day23.rs"
+
 [dependencies]
 regex = "1.11"
 anyhow = "1.0"
