--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,6 +95,10 @@ path = "src/day22.rs"
 name = "day23"
 path = "src/day23.rs"
 
+[[bin]]
+name = "day24"
+path = "src/day24.rs"
+
 [dependencies]
 regex = "1.11"
 anyhow = "1.0"
