--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,6 +99,10 @@ path = "src/day23.rs"
 name = "day24"
 path = "src/day24.rs"
 
+[[bin]]
+name = "day25"
+path = "src/day25.rs"
+
 [dependencies]
 regex = "1.11"
 anyhow = "1.0"
